--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.13.2",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-responsive": "^10.0.1",
     "react-router-dom": "^6.30.2",
     "react-scripts": "5.0.1",
     "styled-components": "^6.1.19",
